# curfew

./: .gitignore  Makefile  PKGBUILD  README.md  curfew  curfew-service.sh  curfew.install  curfew.service  curfew.timer  meson.build  meson_options.txt
config/: curfew.conf
configs/: curfew-daemon.service  curfew.conf.example  curfew.service  org.curfew.conf  org.curfew.policy  org.curfew.service
include/curfew/: config.h  core.h  helper.h  notify.h  systemd_util.h
lib/: curfew.sh
resources/: curfew-gui.ui  org.curfew.gui.desktop
src/cli/: main.c
src/common/: config.c  config.h  dbus_names.h  notify.c  time_utils.c  time_utils.h
src/core/: core.c
src/gui/: main.c
src/service/: curfew.c  curfew.h  daemon.h  dbus.c  dbus.h  helper.c  main.c  notify.c  notify.h  systemd.c  systemd.h
src/systemd/: systemd.c
systemd/system/: curfew-enforce.service  curfew-shutdown.service
systemd/user/: curfew-warn.service
tests/: test_config.c  test_core.c
